added fluent validation, delete method and refactored the validation a bit,

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnectionString": "Data Source=;Initial Catalog=UserDb;Integrated Security=True;TrustServerCertificate=True"
+    "DefaultConnectionString": "Data Source=DESKTOP-6FSF9VU;Initial Catalog=UserDb;Integrated Security=True;TrustServerCertificate=True"
   },
   "Logging": {
     "LogLevel": {
